--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "altair<5",
     "beautifulsoup4>=4.14.3",
+    "folium>=0.20.0",
     "koreanize-matplotlib>=0.1.1",
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
-    "pandas>=3.0.0",
+    "pandas<3",
     "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "streamlit>=1.19.0",
+    "streamlit-folium>=0.26.1",
     "tabulate>=0.9.0",
     "wordcloud>=1.9.6",
 ]
